[tool.poetry]
name = "twint"
version = "0.1.0"
description = ""
authors = ["50bytes.dev <50bytes.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
beautifulsoup4 = "^4.11.1"
cchardet = "^2.1.7"
elasticsearch = "^7.17.4"
PySocks = "^1.7.1"
pandas = "^1.3.5"
aiohttp-socks = "^0.7.1"
schedule = "^1.1.0"
geopy = "^2.2.0"
fake-useragent = "^0.1.11"
googletransx = "^2.4.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

