[tool.poetry]
name = "twint"
version = "2.1.30"
description = ""
authors = ["50bytes.dev <50bytes.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"
aiodns = "*"
beautifulsoup4 = "*"
cchardet = "*"
elasticsearch = "*"
PySocks = "*"
pandas = "*"
aiohttp-socks = "*"
schedule = "*"
geopy = "*"
fake-useragent = "*"
googletransx = "*"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

